# video_bridge

./: README.md  dbus_handler.c  dbus_handler.h  main.c  meson.build  pipewire_handler.c  pipewire_handler.h  x11_handler.c  x11_handler.h
